--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: EOS Developement
+title: 거북이 개발자
 
 # Short description of your site
 description: A virtual proof that name is awesome!
