--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: A virtual proof that name is awesome!
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  Project: "aboutme"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
@@ -72,10 +72,9 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  email: "xt0680@gmail.com"
+  facebook: https://www.facebook.com/taewook.um.9
+  github: https://github.com/xt0680
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
